<?xml version="1.0"?>
<package>
  <name>sr_teleop_polhemus_documentation</name>
  <version>0.0.1</version>
  <description>This repository contains the documentation of our Polhemus Teleoperation Systems
  </description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
